# SR-KAN

./: LICENSE  README.md  SRSD_example_i_12_11.ipynb  example.ipynb  pyproject.toml  simplification_showcase.ipynb
srkan/: __init__.py  separability.py  simplification_nn.py  srkan.py  symmetry.py  train.py  utils.py
srkan/function_libraries/: __init__.py  function_utils.py
srkan/function_libraries/multivariate/: brute_force.py  mv_polynomial.py  mv_standard.py  mv_trig.py
srkan/function_libraries/univariate/: function_lib.py  hyperbolic.py  logarithms.py  polynomial.py  special_functions.py  standard_functions.py  trigonometric.py
srkan/model/: __init__.py  composite_kan.py  kan.py  kan_layer.py  rbf.py
